--- a/omnie-abednarz.html
+++ b/omnie-abednarz.html
@@ -69,8 +69,8 @@
                     <a class="nav-link link text-black display-4" href="galeria-abednarz.html">
                         Galeria</a>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="fotograf-slub-abednarz.html" data-toggle="dropdown-submenu" aria-expanded="false">
-                        Oferta &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="fotograf-komunia-abednarz.html">Komunie</a><a class="text-black dropdown-item display-4" href="fotograf-slub-abednarz.html" aria-expanded="false">Śluby</a><a class="text-black dropdown-item display-4" href="fotograf-studniowka-abednarz.html" aria-expanded="false">Studniówki i półmetki</a><a class="text-black dropdown-item display-4" href="fotograf-bierzmowanie-abednarz.html" aria-expanded="false">Bierzmowanie</a><a class="text-black dropdown-item display-4" href="fotograf-osiemnastka-abednarz.html" aria-expanded="true">18 Osiemnastki</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="kontakt-abednarz.html">
-                        Kontakt &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li></ul>
+                        Oferta &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="fotograf-komunia-abednarz.html">Komunie</a><a class="text-black dropdown-item display-4" href="fotograf-slub-abednarz.html" aria-expanded="false">Śluby</a><a class="text-black dropdown-item display-4" href="fotograf-studniowka-abednarz.html" aria-expanded="false">Studniówki i półmetki</a><a class="text-black dropdown-item display-4" href="fotograf-bierzmowanie-abednarz.html" aria-expanded="false">Bierzmowanie</a><a class="text-black dropdown-item display-4" href="fotograf-osiemnastka-abednarz.html" aria-expanded="false">18 Osiemnastki</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="kontakt-abednarz.html" aria-expanded="false">
+                        Kontakt &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li><li class="nav-item dropdown open"><a class="nav-link link text-black dropdown-toggle display-4" href="kontakt-abednarz.html" aria-expanded="true" data-toggle="dropdown-submenu">Strefa klienta &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="sesje-narzeczeskie-strefa-abednarz.html" aria-expanded="false">Sesje narzeczeńskie</a></div></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://wa.me/48 576996046">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="counters4 counters cid-s5e9sLgyiM" id="counters4-b">
+<section class="engine"><a href="https://mobirise.info/b">how to create a site for free</a></section><section class="counters4 counters cid-s5e9sLgyiM" id="counters4-b">
 
     
 
