--- a/fotograf-komunia-abednarz.html
+++ b/fotograf-komunia-abednarz.html
@@ -67,7 +67,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="menu cid-s5dLX3UWVr" once="menu" id="menu2-14">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="menu cid-s5dLX3UWVr" once="menu" id="menu2-14">
 
     
 
