--- a/sesje-narzeczenskie-strefa-abednarz.html
+++ b/sesje-narzeczenskie-strefa-abednarz.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="cid-s7AyLy0uyi" id="image4-23">
+<section class="engine"><a href="https://mobirise.info/g">build your own website for free</a></section><section class="cid-s7AyLy0uyi" id="image4-23">
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
     <!-- End block parameters -->
