--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -120,7 +120,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
-                            Komunijny czerwiec</h4>
+                            <br>Komunijny czerwiec</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             Tegoroczny czerwiec przebiegał inaczej niż w poprzednich latach. Z powodu epidemii koronawirusa wszystko się poprzestawiało również w zleceniach fotograficznych. Tym razem czerwiec okazał się miesiącem komunijnym, a nie maj jak było dotychczas.&nbsp;<a href="komunijny-czerwiec.html">Dowiedz się więcej...</a>
                         </p>
