--- a/fotograf-komunia-abednarz.html
+++ b/fotograf-komunia-abednarz.html
@@ -68,7 +68,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="menu cid-s5dLX3UWVr" once="menu" id="menu2-14">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="menu cid-s5dLX3UWVr" once="menu" id="menu2-14">
 
     
 
