--- a/kontakt-abednarz.html
+++ b/kontakt-abednarz.html
@@ -67,8 +67,8 @@
                     <a class="nav-link link text-black display-4" href="omnie-abednarz.html">
                         O mnie &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
                 </li><li class="nav-item dropdown">
-                    <a class="nav-link link text-black dropdown-toggle display-4" href="galeria-abednarz.html" data-toggle="dropdown-submenu">
-                        Galeria</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="galeria2-abednarz-fotograf.html">Ślub/Wesele</a></div>
+                    <a class="nav-link link text-black dropdown-toggle display-4" href="galeria-abednarz.html" data-toggle="dropdown-submenu" aria-expanded="false">
+                        Galeria</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="galeria-abednarz-fotograf-slub.html">Ślub/Wesele</a></div>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="fotograf-slub-abednarz.html" data-toggle="dropdown-submenu" aria-expanded="false">
                         Oferta &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="fotograf-komunia-abednarz.html">Komunie</a><a class="text-black dropdown-item display-4" href="fotograf-slub-abednarz.html" aria-expanded="false">Śluby</a><a class="text-black dropdown-item display-4" href="fotograf-studniowka-abednarz.html" aria-expanded="false">Studniówki i półmetki</a><a class="text-black dropdown-item display-4" href="fotograf-bierzmowanie-abednarz.html" aria-expanded="false">Bierzmowanie</a><a class="text-black dropdown-item display-4" href="fotograf-osiemnastka-abednarz.html" aria-expanded="false">18 Osiemnastki</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="kontakt-abednarz.html" aria-expanded="false" data-toggle="dropdown-submenu">Strefa klienta &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="sesje-narzeczenskie-strefa-abednarz.html" aria-expanded="false">Sesje narzeczeńskie</a> <a class="text-black dropdown-item display-4" href="sluby-strefa-klienta.html" aria-expanded="false" target="_blank">Śluby</a> </div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="kontakt-abednarz.html" aria-expanded="false">
                         Kontakt &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li></ul>
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="mbr-section contacts2 cid-s5eiXVZGf1" id="contacts2-j">
+<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="mbr-section contacts2 cid-s5eiXVZGf1" id="contacts2-j">
     <!---->
     
     <!---->
